--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@deleteagency/device",
+  "name": "@deleteagency/device-observer",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Delete-Agency/device.git"
+    "url": "https://github.com/Delete-Agency/device-observer.git"
   },
-  "homepage": "https://github.com/Delete-Agency/device",
+  "homepage": "https://github.com/Delete-Agency/device-observer",
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
@@ -22,7 +22,6 @@
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "express": "^4.17.1",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
   },
