--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deleteagency/device-observer",
-  "version": "2.0.0-1",
+  "version": "2.0.0",
   "description": "",
   "main": "src/index.js",
   "files": [
