--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "files": [
-    "src",
-    "standalone"
+    "src"
   ],
   "repository": {
     "type": "git",
@@ -29,7 +28,6 @@
     "@babel/plugin-transform-object-assign": "7.10.3",
     "@babel/preset-env": "7.10.3",
     "@babel/preset-typescript": "7.12.1",
-    "@babel/runtime-corejs3": "7.12.1",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "core-js": "3.6.4",
